[package]
name = "taxon"
version = "0.1.0"
authors = ["roket"]
edition = "2021"
rust-version = "1.83.0"
description = "A Discord bot for Warframe gameplay"
repository = ""
license = "MIT"
license-file = "LICENSE"
keywords = []
categories = []
readme="README.md"

[dependencies]
bytes = "1.10.0"
dotenv = "0.15.0"
env_logger = "0.11.6"
log = "0.4.25"
log4rs = "1.3.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
